--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:background="@color/orange"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:title="Privacy SenSys" />
+        app:title="FitnessPro" />
 
 
     <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
