--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#00BCD4</color>
     <color name="orange">#00BCD4</color>
     <color name="white">#FFF</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
